# AntiGravity

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  client.py  data_gen.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  run.sh  validate-submission.sh  validate.py
environment/: __init__.py  env.py
server/: app.py  requirements.txt
server/static/: index.html
