[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antigravity-env"
version = "1.0.0"
description = "AntiGravity: An OpenEnv email triage environment"
authors = [{ name = "AntiGravity Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "openenv-core>=0.1.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic>=2.6.0",
  "faker>=24.0.0",
  "httpx>=0.27.0",
  "openai>=1.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.scripts]
server = "server.app:main"

